# Waykey

./: .SRCINFO  .eslintrc.json  .gitignore  .lintstagedrc  API_REFERENCE.md  API_REFERENCE_EN.md  CMakeLists.txt  PKGBUILD  README.md  README_TR.md  binding.gyp  index.js  install.sh  package-lock.json  package.json  run.js  test.js  waykey.install  waykey.service  waykey.sh  waykey_user_guide.md
docs/: waykey_user_guide_en.md  waykey_user_guide_tr.md
public/: index.html
scripts/: Keys.js  generate-keys.js
src/: Dashboard.js  HotkeyManager.js  HyprlandIPC.js  InputListener.js  VirtualDevice.cpp  VirtualDevice.h  VirtualDeviceWrapper.cpp  VirtualDeviceWrapper.h  WayKey.js  addon.cpp  main.cpp
tests/: hotkey.test.js  test_virtual_device.cpp
